# esp32s3_cli-api

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  idf_component.yml  sdkconfig.defaults
.devcontainer/: Dockerfile
.github/workflows/: build.yml  format.yml  release.yml
components/cli-api/: CMakeLists.txt  cli-api.c
components/cli-api/include/: cli-api.h
components/cmd_nvs/: cmd_nvs.c  cmd_nvs.h
components/cmd_system/: cmd_system.h  cmd_system_sleep.c
components/cmd_wifi/: cmd_wifi.h
docs/: publish_to_esp_registry.md
examples/advanced/: CMakeLists.txt  README.md  sdkconfig.defaults
examples/advanced/components/cmd_nvs/: cmd_nvs.h
examples/advanced/components/cmd_system/: cmd_system.c  cmd_system_common.c  cmd_system_sleep.c
examples/advanced/components/cmd_wifi/: cmd_wifi.c
examples/advanced/main/: CMakeLists.txt  idf_component.yml  main.c
examples/basic/: CMakeLists.txt  README.md  sdkconfig.defaults
examples/basic/main/: CMakeLists.txt  idf_component.yml  main.c
main/: CMakeLists.txt  console_example_main.c  main.c
